--- a/note/style_note.css
+++ b/note/style_note.css
@@ -4,10 +4,7 @@ Programme CSS
 Réalisé par Nicolas CHANTEPIE 
 */
 
-body, header, footer, .tarifs, p, #prelude, #point_dorgue, #mouvement_final, #mentions, #contact, section
-{
-    border:1px solid black;
-}
+
 /*Début de programmation*/
 
 /*Mise en page corps*/
@@ -16,9 +13,10 @@ body
     {
     display:flex;
     flex-direction:column;
-    justify-content:space-between;
-   
-
+    background-color: #FDE1DD;
+    color: #3D1319;
+    width:1281px;
+    height:2385px;
 }
 
 header {
@@ -28,13 +26,19 @@ header {
     align-items: center;
     height: 260px;
     background:#579C87;
+    border-bottom: 3px solid black;
    
 }
-
-h1 {
-    
-    color: #FDD835;
-    font-size: 10em;
+section
+{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-around; 
+    width: 1181px;
+    height: 1682px;
+    border: black 2px solid;
+    margin: 151px 50px 151px 50px;
+    border: black solid 2px;
 }
 
 footer {
@@ -42,26 +46,49 @@ footer {
     flex-wrap: wrap;
     justify-content: space-between;
     height: 137px;
-    margin-top: 100px;
     font-size: 30px;
     background: #579C87;
-    
+    position: fixed;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+
 }
 
 /*Mise en page du menu*/
 
-section
-{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-   
+
+
+h1 {
+    color: #FDCB46;
+    font-size: 10em;
 }
-.la_note
+
+
+h2
 {
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: yellow;
     height: 100px;
+    border: 1px solid black;
+}
+#logo
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: solid 1px black;
+    
+}
+
+#logo p
+{
+    font-size: 70px;
+    text-align: center;
+    border: black 1px solid;
+    margin: 0px;
 }
 
 #prelude, #point_dorgue
@@ -69,10 +96,12 @@ section
     display:flex;
     justify-content: space-between;
     margin:0px 250px 0px 250px;
+    border: solid 1px black;
 
 }
 #mouvement_final {
     margin: 0px 250px 0px 250px;
+    border: solid 1px black;
 }
 h3:hover
 {
@@ -84,6 +113,7 @@ h3
     font-style:italic;
     text-align:center;
 }
+
 .hr
 {
     display: flex;
@@ -103,4 +133,25 @@ h3
 
     /* espace les traits du texte */
     margin: 15px 70px;
+}
+/* Mise en page du footer*/
+
+#mentions, #contact {
+    width: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+span
+{
+    color: #FDCB46;
+}
+
+a:link
+{
+    text-decoration: none;
+}
+
+p{
+    line-height: 30px;
 }
