--- a/note/style_note.css
+++ b/note/style_note.css
@@ -7,18 +7,17 @@ Réalisé par Nicolas CHANTEPIE
 
 /*Début de programmation*/
 
-/*Mise en page corps*/
+
 
 body
     {
     display:flex;
     flex-direction:column;
-    background-color: #FDE1DD;
     color: #3D1319;
     width:1281px;
-    height:2385px;
+    height:2285px;
 }
-
+/*Mise en page header-------------------------------------------------------------*/
 header {
     
     display: flex;
@@ -29,77 +28,40 @@ header {
     border-bottom: 3px solid black;
    
 }
-section
-{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-around; 
-    width: 1181px;
-    height: 1682px;
-    border: black 2px solid;
-    margin: 151px 50px 151px 50px;
-    border: black solid 2px;
-}
-
-footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 137px;
-    font-size: 30px;
-    background: #579C87;
-    position: fixed;
-    right: 0px;
-    left: 0px;
-    bottom: 0px;
-
-}
-
-/*Mise en page du menu*/
-
-
-
 h1 {
     color: #FDCB46;
     font-size: 10em;
 }
+/*Fin de mise en page header------------------------------------------------------*/
 
 
-h2
+section
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: yellow;
-    height: 100px;
-    border: 1px solid black;
+    display:flex;
+    flex-direction:column; 
+    width: 1181px;
+    height: 1782px;
+    border: black 2px solid;
+    margin: 50px 50px 201px 50px;
+    border: black solid 2px;
+    background-color: #FDE1DD;
 }
-#logo
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: solid 1px black;
-    
-}
+/*Mise en page section menu ------------------------------------------------------*/
+ #menu
+ {
+    margin-top: 80px;
+ }
 
-#logo p
-{
-    font-size: 70px;
-    text-align: center;
-    border: black 1px solid;
-    margin: 0px;
-}
-
-#prelude, #point_dorgue
+#prelude, #point_dorgue, #mouvement_final 
 {
     display:flex;
     justify-content: space-between;
-    margin:0px 250px 0px 250px;
+    font-size: 25px;
+    margin:80px 100px 80px 100px;
     border: solid 1px black;
 
 }
-#mouvement_final {
+{
     margin: 0px 250px 0px 250px;
     border: solid 1px black;
 }
@@ -112,14 +74,16 @@ h3
 {
     font-style:italic;
     text-align:center;
+    font-size: 40px;
+    border: solid black 1px;
 }
-
 .hr
 {
     display: flex;
     align-items: center;
     text-align: center;
 }
+
 .hr::before,
 .hr::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
@@ -132,16 +96,75 @@ h3
     flex: 1;
 
     /* espace les traits du texte */
-    margin: 15px 70px;
+    margin: 45px 100px;
 }
-/* Mise en page du footer*/
 
-#mentions, #contact {
+/*Mise en page header et footer logo*/
+#logo
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top:100px;
+    background-color: #FDE1DD;
+    height: 160px;  
+    border: solid 1px black;
+}   
+    
+#logo p
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: black 1px solid;
+    font-size: 62px;
+    height: 66px;
+    margin-top:10px;
+}
+#logo .fas
+{
+    text-align: center;
+    padding-top:5px;
+    font-size: 100px;
+    height: 120px;
+}
+
+h2
+{
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 100px;
+    border: 1px black solid ;
+}
+p{
+    line-height: 30px;
+    margin: 0px;    
+}
+
+/*Fin de mise en page de la section menu -----------------------------------------*/
+
+/*Mise en page section footer ----------------------------------------------------*/
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 137px;
+    font-size: 30px;
+    background: #579C87;
+    position: fixed;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+}
+
+#mentions, #contact 
+{
     width: 260px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 span
 {
     color: #FDCB46;
@@ -151,7 +174,8 @@ a:link
 {
     text-decoration: none;
 }
+/*Fin de mise en page section footer -----------------------------------------------*/
 
-p{
-    line-height: 30px;
-}
+
+
+
