modification de la police menu plette

--- a/délice/style_delice.css
+++ b/délice/style_delice.css
@@ -4,11 +4,35 @@ Programme CSS
 Réalisé par Nicolas CHANTEPIE 
 */
 
-body, header, footer, .tarifs, p, #prelude, #point_dorgue, #mouvement_final, #mentions, #contact, section
-{
-    border:1px solid black;
-}
 /*Début de programmation*/
+
+/*Déclaration des polices-----------------------------------------------------------*/
+@font-face {
+    font-family: 'caveatregular';
+    src: url('caveat_regular_macroman/caveat-regular-webfont.eot');
+    src: url('caveat_regular_macroman/caveat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('caveat_regular_macroman/caveat-regular-webfont.woff2') format('woff2'),
+         url('caveat_regular_macroman/caveat-regular-webfont.woff') format('woff'),
+         url('caveat_regular_macroman/caveat-regular-webfont.ttf') format('truetype'),
+         url('caveat_regular_macroman/caveat-regular-webfont.svg#caveatregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'kaushanscript';
+    src:  url('kaushan-script/KaushanScript-Regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'montserrat';
+    src:  url('montserrat/Montserrat-Regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+/*Fin de déclaration des polices--------------------------------------------------*/
 
 /*Mise en page corps*/
 
@@ -19,6 +43,7 @@ body
     color: #3D1319;
     width:1281px;
     height:2285px;
+    font-family: 'montserrat', Impact, Helvetica, serif ;
 }
 /*Mise en page header-------------------------------------------------------------*/
 header {
@@ -27,9 +52,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 260px;
-    background:#579C87;
-    border-bottom: 3px solid black;
-   
+    background:#579C87; 
 }
 h1 {
     color: #FDCB46;
@@ -44,10 +67,9 @@ section
     flex-direction:column; 
     width: 1181px;
     height: 1782px;
-    border: black 2px solid;
     margin: 50px 50px 201px 50px;
-    border: black solid 2px;
     background-color: #F9F9F9;
+    font-family:'caveatregular', Impact, Helvetica, serif ;
 }
 /*Mise en page section menu ------------------------------------------------------*/
 
@@ -61,10 +83,19 @@ section
     font-size: 45px;
     text-align: center;
     background-color: #F9F9F9;
-    border: 1px black solid ;
 }
 
-
+#delice p
+{
+    padding-top: 20px;
+    width: 700px;
+    height: 100px;
+    font-size: 65px;
+    font-family: 'dancingscript', Impact, Helvetica,serif ;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0228DD), to(#8F5BFE));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 p
 {
     line-height: 55px;
@@ -72,12 +103,10 @@ p
 }
 #entrée, #plats, #dessert
 {
-        display:flex;
-        justify-content: space-between;
-        font-size: 25px;
-        margin:60px 100px 60px 100px;
-        border: solid 1px black;
-    
+    display:flex;
+    justify-content: space-between;
+    font-size: 25px;
+    margin:60px 100px 60px 100px;
 }
 
 h3:hover
@@ -90,18 +119,45 @@ h3
     font-style:italic;
     text-align:center;
     font-size: 30px;
-    border: solid black 1px;
 }
-.hr 
+
+#hr_commencer, #hr_continuer, #hr_terminer 
 {
     display: flex;
     align-items: center;
     text-align: center;
 }
-.hr::before,
-.hr::after {
+#hr_commencer::before,
+#hr_commencer::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
-    border-top: 0.2em solid;
+    border-top: 0.2em solid #0228DD;
+
+    /* nécessaire pour afficher les pseudo-éléments */
+    content: "";
+
+    /* partage le reste de la largeur disponible */
+    flex: 1;
+
+    /* espace les traits du texte */
+    margin: 45px 100px;
+}
+#hr_continuer::before,
+#hr_continuer::after {
+    /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
+    border-top: 0.2em solid #0670F3;
+
+    /* nécessaire pour afficher les pseudo-éléments */
+    content: "";
+
+    /* partage le reste de la largeur disponible */
+    flex: 1;
+
+    /* espace les traits du texte */
+    margin: 45px 100px;
+}#hr_terminer::before,
+#hr_terminer::after {
+    /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
+    border-top: 0.2em solid #229DF9;
 
     /* nécessaire pour afficher les pseudo-éléments */
     content: "";
@@ -123,7 +179,7 @@ footer {
     background: #579C87;
     position: fixed;
     right: 0px;
-    left: 0px;
+    left: 8px;
     bottom: 0px;
 }
 
