--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -5,6 +5,33 @@ Réalisé par Nicolas CHANTEPIE
 */
 
 /*Début de programmation*/
+/*Déclaration des polices-----------------------------------------------------------*/
+@font-face {
+    font-family: 'caveatregular';
+    src: url('caveat_regular_macroman/caveat-regular-webfont.eot');
+    src: url('caveat_regular_macroman/caveat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('caveat_regular_macroman/caveat-regular-webfont.woff2') format('woff2'),
+         url('caveat_regular_macroman/caveat-regular-webfont.woff') format('woff'),
+         url('caveat_regular_macroman/caveat-regular-webfont.ttf') format('truetype'),
+         url('caveat_regular_macroman/caveat-regular-webfont.svg#caveatregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'kaushanscript';
+    src:  url('kaushan-script/KaushanScript-Regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'montserrat';
+    src:  url('montserrat/Montserrat-Regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+/*Fin de déclaration des polices--------------------------------------------------*/
 
 /*Mise en page corps*/
 
@@ -15,6 +42,7 @@ body
     color: #3D1319;
     width:1281px;
     height:2285px;
+    font-family: 'montserrat', Impact, Helvetica, serif ;
 }
 /*Mise en page header-------------------------------------------------------------*/
 header {
@@ -23,9 +51,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 260px;
-    background:#579C87;
-    border-bottom: 3px solid black;
-   
+    background:#579C87;  
 }
 h1 {
     color: #FDCB46;
@@ -44,6 +70,8 @@ section
     margin: 50px 50px 201px 50px;
     border: black solid 2px;
     background-color: #FDFFFD;
+    font-family:'caveatregular', Impact, Helvetica, serif ;
+
 }
 /*Mise en page section menu ------------------------------------------------------*/
 
@@ -57,9 +85,18 @@ section
     font-size: 45px;
     text-align: center;
     background-color: #FDFFFD;
-    border: 1px black solid ;
 }
-
+#palette p
+{
+    padding-top: 20px;
+    width: 700px;
+    height: 100px;
+    font-size: 65px;
+    font-family: 'kaushanscript', Impact, Helvetica,serif ;
+    background: -webkit-gradient(linear, left top, left bottom, from(#41963C), to(#B8FA7C));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
 p
 {
@@ -71,9 +108,7 @@ p
         display:flex;
         justify-content: space-between;
         font-size: 25px;
-        margin:60px 100px 60px 100px;
-        border: solid 1px black;
-    
+        margin:60px 100px 60px 100px;   
 }
 
 h3:hover
@@ -97,7 +132,7 @@ h3
 .hr::before,
 .hr::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
-    border-top: 0.2em solid;
+    border-top: 0.2em solid #41963C;
 
     /* nécessaire pour afficher les pseudo-éléments */
     content: "";
@@ -119,7 +154,7 @@ footer {
     background: #579C87;
     position: fixed;
     right: 0px;
-    left: 0px;
+    left: 8px;
     bottom: 0px;
 }
 
