--- a/délice/style_delice.css
+++ b/délice/style_delice.css
@@ -20,8 +20,8 @@ Réalisé par Nicolas CHANTEPIE
 }
 
 @font-face {
-    font-family: 'kaushanscript';
-    src:  url('kaushan-script/KaushanScript-Regular.otf') format('truetype');
+    font-family: 'dancingscript';
+    src:  url('dancing-script/DancingScript-Regular.otf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -80,17 +80,17 @@ section
 #delice {
     display: flex;
     justify-content: center;
-    font-size: 45px;
     text-align: center;
     background-color: #F9F9F9;
 }
 
 #delice p
 {
+    margin-top: 50px;
     padding-top: 20px;
     width: 700px;
     height: 100px;
-    font-size: 65px;
+    font-size: 70px;
     font-family: 'dancingscript', Impact, Helvetica,serif ;
     background: -webkit-gradient(linear, left top, left bottom, from(#0228DD), to(#8F5BFE));
     -webkit-background-clip: text;
@@ -116,7 +116,6 @@ h3:hover
 
 h3
 {
-    font-style:italic;
     text-align:center;
     font-size: 30px;
 }
