--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -3,8 +3,6 @@ Programme CSS
 -----------------
 Réalisé par Nicolas CHANTEPIE 
 */
-
-
 /*Début de programmation*/
 
 /*Déclaration des polices-----------------------------------------------------------*/
@@ -94,6 +92,7 @@ p
     line-height: 55px;
     margin: 0px;    
 }
+
 #entrée, #plats, #dessert
 {
     display:flex;
@@ -128,6 +127,8 @@ h3
     font-size: 30px;
 
 }
+
+/* Partie insérer un text au milieur d'un trait-------------------------------------------*/
 #hr_appetit, #hr_plaisir, #hr_gourmandise 
 {
     display: flex;
@@ -181,6 +182,7 @@ h3
 
 
 /*Mise en page section footer ----------------------------------------------------*/
+
 footer {
     display: flex;
     flex-wrap: wrap;
@@ -195,7 +197,7 @@ footer {
     bottom: 0px;
 }
 
-#mentions, #contact 
+.wiggle
 {
     width: 260px;
     display: flex;
@@ -213,3 +215,25 @@ a:link
     text-decoration: none;
 }
 /*Fin de mise en page section footer -----------------------------------------------*/
+
+@-webkit-keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
+
+.wiggle :hover
+{
+    -webkit-animation-name:shake;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-iteration-count: infinite ;
+}
