--- a/délice/style_delice.css
+++ b/délice/style_delice.css
@@ -119,7 +119,7 @@ h3
     text-align:center;
     font-size: 30px;
 }
-
+/* Partie insérer un text au milieur d'un trait-------------------------------------------*/
 #hr_commencer, #hr_continuer, #hr_terminer 
 {
     display: flex;
@@ -181,8 +181,7 @@ footer {
     left: 8px;
     bottom: 0px;
 }
-
-#mentions, #contact 
+.wiggle 
 {
     width: 260px;
     display: flex;
@@ -201,4 +200,24 @@ a:link
 }
 /*Fin de mise en page section footer -----------------------------------------------*/
 
+@-webkit-keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
 
+.wiggle :hover
+{
+    -webkit-animation-name:shake;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-iteration-count: infinite ;
+}
