--- a/note/style_note.css
+++ b/note/style_note.css
@@ -21,9 +21,8 @@ Réalisé par Nicolas CHANTEPIE
     font-weight: normal;
     font-style: normal;
 }
+
 /*Fin de déclaration des polices--------------------------------------------------*/
-
-
 
 body
     {
@@ -49,7 +48,7 @@ h1 {
 }
 /*Fin de mise en page header------------------------------------------------------*/
 
-
+/*Mise en page section menu ------------------------------------------------------*/
 section
 {
     display:flex;
@@ -60,8 +59,8 @@ section
     background-color: #FDE1DD;
     font-family:'kalam', Impact, Helvetica, serif ;
 }
-/*Mise en page section menu ------------------------------------------------------*/
- #menu
+
+#menu
  {
     margin-top: 80px;
  }
@@ -84,6 +83,8 @@ h3
     text-align:center;
     font-size: 40px;
 }
+
+/* Partie insérer un text au milieur d'un trait-------------------------------------------*/
 .hr
 {
     display: flex;
@@ -162,7 +163,7 @@ footer {
     bottom: 0px;
 }
 
-#mentions, #contact 
+.wiggle
 {
     width: 260px;
     display: flex;
@@ -181,6 +182,26 @@ a:link
 }
 /*Fin de mise en page section footer -----------------------------------------------*/
 
+@-webkit-keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
 
+.wiggle :hover
+{
+    -webkit-animation-name:shake;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-iteration-count: infinite ;
+}
 
 
