--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -124,12 +124,15 @@ h3
     font-size: 30px;
     border: solid black 1px;
 }
+
+/* Partie insérer un text au milieur d'un trait-------------------------------------------*/
 .hr 
 {
     display: flex;
     align-items: center;
     text-align: center;
 }
+
 .hr::before,
 .hr::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
@@ -159,7 +162,7 @@ footer {
     bottom: 0px;
 }
 
-#mentions, #contact 
+.wiggle
 {
     width: 260px;
     display: flex;
@@ -179,4 +182,24 @@ a:link
 
 /*Fin de mise en page section footer -----------------------------------------------*/
 
+@-webkit-keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
 
+.wiggle :hover
+{
+    -webkit-animation-name:shake;
+    -webkit-animation-duration: 0.8s;
+    -webkit-animation-iteration-count: infinite ;
+}
