--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ span
 {
     color: #FDCB46;
 }
+
 .fas
 {
     font-size:60px;
@@ -166,9 +167,6 @@ span
     -webkit-background-clip: ;
     -webkit-text-fill-color: transparent;
 } 
-
-
-
 
 a:link
 {
@@ -197,3 +195,58 @@ a:link
     -webkit-animation-duration: 0.8s;
     -webkit-animation-iteration-count: infinite ;
 }
+
+#note :hover , #chic :hover, #délice :hover, #palette :hover
+{
+    transform: scale(1.6);
+    transition-duration: 180ms;
+}
+
+aside #apres, aside:hover #avant
+{
+    display: none;
+}
+   
+aside:hover #apres
+{
+    display: block;
+    font-size: 1.9em;
+    font-weight: bold;    
+}
+
+/*Animation points de suspension-------------------------------*/
+
+#point1
+{
+    animation: masuperanimation 750ms  infinite;     
+}
+#point2
+{
+    animation: masuperanimation 750ms 250ms infinite; 
+}
+#point3
+{
+    animation: masuperanimation 750ms 500ms infinite; 
+}
+
+@keyframes masuperanimation { /* Tous les autres navigateurs */
+    0% {
+        opacity: 0.2;
+
+    }
+    25% {
+        opacity: 0.4;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+    75% {
+        opacity: 0.8;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
